--- a/PresentationLayer/SignalR.Web/SignalR.WEB.csproj
+++ b/PresentationLayer/SignalR.Web/SignalR.WEB.csproj
@@ -19,4 +19,9 @@
 	  <ProjectReference Include="..\..\SignalRProvider\SignalRProvider.csproj" />
 	</ItemGroup>
 
+
+	<ItemGroup>
+	  <Folder Include="Models\" />
+	</ItemGroup>
+
 </Project>
