--- a/PresentationLayer/SignalR.Web/SignalR.WEB.csproj
+++ b/PresentationLayer/SignalR.Web/SignalR.WEB.csproj
@@ -23,6 +23,8 @@
 	<ItemGroup>
 	  <Folder Include="Models\" />
 	  <Folder Include="wwwroot\Document\SignalR\" />
+	  <Folder Include="wwwroot\SignalR.hub\javascript\" />
+	  <Folder Include="wwwroot\SignalR.hub\css\" />
 	</ItemGroup>
 
 </Project>
