--- a/PresentationLayer/SignalR.Web/SignalR.WEB.csproj
+++ b/PresentationLayer/SignalR.Web/SignalR.WEB.csproj
@@ -24,6 +24,7 @@
 	  <Folder Include="Models\" />
 	  <Folder Include="wwwroot\Document\SignalR\" />
 	  <Folder Include="wwwroot\SignalR.hub\css\" />
+	  <Folder Include="wwwroot\SignalR.hub\javascript\" />
 	</ItemGroup>
 
 </Project>
